# miscellaneous

./: .gitignore  .gitmodules
algorithms/edit distance/: editdistance.h  recursive.cpp
algorithms/md5/: main.cpp  md5.cpp  md5.h  sintable.fal
codechef/: chefluck.py  coins.py  double.py  fctrl.py  marbles.py  stones.py
erlang/: boolean.beam  boolean.erl  db.beam  db.erl  echo.erl  ex3.beam  ex3.erl  hello.beam  hello.erl
exercises/PI/: ComputePI.java  MTAreaPI.java
exercises/Scacchiera/: README  Scacchiera.pro  bomb.qrc  bombitem.cpp  bombitem.h  chessboardscene.cpp  chessboardscene.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
exercises/Scacchiera-build-desktop-Qt_4_7_4_for_Desktop_-_MinGW_4_4__Qt_SDK__Debug/: Makefile  Makefile.Debug  Makefile.Release
fractalviewer/: CMakeLists.txt  Complex.java  DrawerTaskResult.java  Fractal.java  FractalDrawerTask.java  FractalPanel.java  FractalPanelDrawer.java  FractalSaver.java  FractalToImage.java  HistogramMTMandelbrotDrawer.java  SimpleMandelbrotDrawer.java  TestComplex.java
fractalviewer/src/: AbstractFractalDrawer.java  AbstractMTFractalDrawer.java  AbstractRegionMTFractalDrawer.java  Fractal.java
harmonic/: README  main.py
opengl/test1/: CMakeLists.txt  IStreamShaderLoader.hpp  LocalShaderProgramLoader.hpp  SDLGLApplication.hpp  fragmentShader.glsl  main.cpp  run.bash  run.bish
opengl/test1/shader/: fragmentShader.glsl  vertexShader.glsl
projecteuler/: 1.hs  1.py  10.py  11.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  es1.c  es10.c  es11.c  es12.c  es13.c  es2.c  es3.c  es4.c  es5.c  es6.c  es7.c  es8.c  es9.c  primes.py  problem1.hs  problem2.hs
(+64 files in other folders)
